# fcitx5-mozc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  prebuild.yml  sync.yml
cmake/: base.cmake  composer.cmake  config.cmake  converter.cmake  data_manager.cmake  dictionary.cmake  engine.cmake  mozc-static.cmake  prediction.cmake  protobuf.cmake  rewriter.cmake  session.cmake  storage.cmake  transliteration.cmake  usage_stats.cmake
patches/: mozc-addon.conf  protobuf.patch
scripts/: gen_pos_map.sh  gen_pos_matcher_code.sh  gen_version_def.sh
src/: log.cc  mac_util.cc  mac_util.mm  process.cc
src/unix/fcitx5/: BUILD.bazel  CMakeLists.txt  fcitx_key_event_handler.h  mozc_client_interface.h  mozc_client_pool.cc  mozc_client_pool.h  mozc_direct_client.cc  mozc_direct_client.h  mozc_engine.cc  mozc_engine.h  mozc_engine_factory.cc  mozc_ipc_client.cc  mozc_ipc_client.h  mozc_state.cc  mozc_state.h  org.fcitx.Fcitx5.Addon.Mozc.metainfo.xml.in
src/unix/fcitx5/po/: CMakeLists.txt  vi.po
